--- a/Pass_Fail/app/src/main/AndroidManifest.xml
+++ b/Pass_Fail/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Pass_Fail"
         tools:targetApi="31">
         <activity
+            android:name=".StatusActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
